--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Custom Hooks | React App</title>
   </head>
 
   <body>
